--- a/main.css
+++ b/main.css
@@ -30,6 +30,17 @@ body {
     background-color: #ffeae6;
 }
 
+#carousel,
+.carousel-item {
+  height: 50vh; /* menor altura */
+}
+
+.carousel-item img {
+  height: 50vh;
+  object-fit: cover;
+  width: 100%;
+}
+
 .text-colored {
     color: #e15f41;
 }
